# PTL

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .license.c  .license.c~  .travis.yml  CMakeLists.txt  LICENSE  README.md  Threading.cc  pyctest-runner.py  pyctest_PTL.py
.github/workflows/: cancelling.yml  formatting.yml  linux-ci.yml  macos-ci.yml
.scripts/: gperf_cpu_profile.sh  gperf_heap_profile.sh
cmake/Modules/: BuildSettings.cmake  CheckAtomic.cmake  ClangFormat.cmake  Compilers.cmake  ConfigurePackage.cmake  Coverage.cmake  Documentation.cmake  FindGPerfTools.cmake  FindGooglePerf.cmake  FindTBB.cmake  Findittnotify.cmake  MacroUtilities.cmake  Options.cmake  PTLBuildSettings.cmake  PTLCMakeUtilities.cmake  PTLClangFormat.cmake  PTLClangTidy.cmake  PTLCoverage.cmake  PTLFormatting.cmake  PTLInstallDirs.cmake  PTLPackageConfigHelpers.cmake  PTLSanitize.cmake  Packages.cmake  ProjectSettings.cmake
cmake/Templates/: PTLBuild.cmake.in  PTLBuildTargets.cmake  PTLConfig.cmake.in  ptl.pc.in
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  recursive_tasking.cc  tasking.cc
examples/common/: Backtrace.hh  CMakeLists.txt  Timer.cc  Timer.hh  utils.hh
examples/extended/: CMakeLists.txt
examples/extended/rotation/: CMakeLists.txt  rotation.cc
examples/extended/rotation/source/: common.cc  common.hh  constants.hh  cxx_extern.hh  data.hh  macros.hh  mlem.cc  rotate_utils.hh  sirt.cc  typedefs.hh
examples/gpu/: CMakeLists.txt  gpu_tasking.cc  sum.cc  sum.cu  sum.h  sum.hh
examples/minimal/: CMakeLists.txt  minimal.cc
source/: CMakeLists.txt  TaskAllocator.cc  TaskAllocatorList.cc  TaskAllocatorPool.cc  TaskGroup.cc  TaskManager.cc  TaskRunManager.cc  ThreadData.cc  ThreadPool.cc  Threading.cc  Timer.cc  UserTaskQueue.cc  VTask.cc  VTaskGroup.cc  VUserTaskQueue.cc
source/PTL/: AutoLock.hh  Backtrace.hh  GetEnv.hh  Globals.hh  PTL.hh  ScopeDestructor.hh  Singleton.hh  TBBTask.hh  TBBTaskGroup.hh  TBBTaskGroup.icc  Task.hh  TaskAllocator.hh  TaskAllocatorList.hh  TaskAllocatorPool.hh  TaskGroup.hh  TaskGroup.icc  TaskManager.hh  TaskRunManager.hh  TaskSubQueue.hh  ThreadData.hh  ThreadLocalStatic.hh  ThreadPool.hh  Threading.hh  TiMemory.hh  Timer.hh  Timer.icc  Tuple.hh  Types.hh  UserTaskQueue.hh  UserTaskQueue.icc  Utility.hh  VTask.hh  VTaskGroup.hh  VUserTaskQueue.hh
source/PTL/detail/: CxxBackports.hh
